# MAGIST-Algorithm

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  data_parser.py  image.py  index.html  mkdocs.yml  out.csv  pyproject.toml  python_requirments.txt  requirements.txt  search.py  site_settings.yml  sitemap.xml  test.html  test.py  transfer.py  unsupervised_img_clustering.py
.github/workflows/: codeql-analysis.yml  pylint.yml
Configuration/1 - Setup Config File/: index.html
Getting Started/1 - Initial Steps/: index.html
Getting Started/2 - Process Overview/: index.html
Getting Started/3 - Next Steps/: index.html
MAGIST Vision/1 - Basics/: index.html
MAGIST Vision/2 - K-Means Clustering/: index.html
MAGIST Vision/3 - Detection Data Management/: index.html
Scrapped Algorithms/3-Stage-with-GAN/: GAN.py  main.py  test.py
build_conventional/: setup.py
docs/: README.md  coming soon.txt
docs/Getting Started/: 1 - Initial Steps.md  2 - Process Overview.md  3 - Next Steps.md  Process Overview.md
docs/MAGIST Vision/: 1 - Basics.md  2 - K-Means Clustering.md  3 - Detection Data Management.md
environments/: environment.yaml
environments/requirements/: System Packages
requirements/: requirements.txt
search/: search_index.json
src/: README.md  config.json  copilot.py  data_downlink.py  lib_tests.py  main.py  main.rs  main_hmi.py  query.py  requirments.txt  test.py  unsupervised_img_clustering.py
src/config/: config.json  test.py
testing/: cv_detector.py
testing/Custom_YOLO/: slicer.py
testing/ES/: main.py  (+5 more)
(+47 files in other folders)
